[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_http_checker"
version = "0.0.0"
description = "A simple CLI tool to check the status of URLs."
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.1,<9.0"
]

[project.optional-dependencies]
dev = [
  "bandit",
  "black",
  "build",
  "mypy",
  "pytest",
  "pytest-mock",
  "ruff",
  "python-semantic-release",
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff] # https://docs.astral.sh/ruff/configuration/
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]  # https://mypy.readthedocs.io/en/stable/config_file.html
warn_return_any = true
warn_unused_configs = true
# ignore_missing_imports = true

[tool.bandit]  # https://bandit.readthedocs.io/en/latest/config.html
exclude_dirs = [".venv", "__pycache__", "build", "dist"]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-rA -v -s"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
build_command = "pip install build && python -m build"
# build_command ="env | sort && python --version && python -m build"
build_command_env = ["LD_LIBRARY_PATH"]
dist_path = "dist/"
upload_topypi = false
upload_to_release = true
hvcs = "github"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
# mode = "init"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "ci", "chore", "docs", "feat", "fix", "perf", "refactor", "revert", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "style", "test"]